--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,10 @@
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      %th Movie Title = link_to 'title_header', https://www.google.com]
-      %th Rating
-      %th Release Date
+      //%td %a{:href => '#', :class => 'hilite bg-warning', :id =>'movie_title'} Movie Title
+      %th#title{:class => @title_css, :id => 'title_header' }= link_to "Movie Title", movies_path(key: 'title')
+      %th Ratings
+      %th#releases{:class => @release_css, :id => 'release_date_header'}= link_to "Release Date", movies_path(key: 'releases')
       %th More Info
   %tbody
     - @movies.each do |movie|
