--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,10 +1,16 @@
 -#  This file is app/views/movies/index.html.haml
 %h2 All Movies
 
+= form_tag movies_path, :id => 'ratings_form', :method => :get do
+  Include:
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]", true, {:checked => "checked"}
+  = submit_tag 'Refresh', :id => 'ratings_submit'
+
 %table#movies.table.table-striped.col-md-12
   %thead
     %tr
-      //%td %a{:href => '#', :class => 'hilite bg-warning', :id =>'movie_title'} Movie Title
       %th#title{:class => @title_css, :id => 'title_header' }= link_to "Movie Title", movies_path(key: 'title')
       %th Ratings
       %th#releases{:class => @release_css, :id => 'release_date_header'}= link_to "Release Date", movies_path(key: 'releases')
