--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include:
   - @all_ratings.each do |rating|
     = rating
-    = check_box_tag "ratings[#{rating}]", true, {:checked => "checked"}
+    = check_box_tag "ratings[#{rating}]", true, session[:ratings].nil? || session[:ratings].include?(rating)
   = submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#movies.table.table-striped.col-md-12
